@@ -592,16 +592,12 @@
                 <includes>
                     <include>**/*.yml</include>
                     <include>**/banner.txt</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources/mapper</directory>
-                <includes>
                     <include>**/*.xml</include>
+                    <include>**/*.sql</include>
+                    <include>**/*.properties</include>
+                    <include>static/**/*</include>
+                    <include>templates/**/*</include>
                 </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
         </resources>
@@ -680,7 +676,7 @@
                                     <descriptorRef>artifact</descriptorRef>
                                 </assembly>
                                 <!--定义容器启动命令-->
-                                <entryPoint>["java", "-jar","/${project.build.finalName}.jar"]</entryPoint>
+                                <entryPoint>["java", "--add-opens=java.base/java.util=ALL-UNNAMED", "-jar","/${project.build.finalName}.jar"]</entryPoint>
                                 <!--定义维护者-->
                                 <maintainer>baiyx</maintainer>
                                 <!--使用Dockerfile构建时打开-->
@@ -692,7 +688,7 @@
                                 <containerNamePattern>${project.artifactId}</containerNamePattern>
                                 <!--设置端口映射-->
                                 <ports>
-                                    <port>9090:9090</port>
+                                    <port>1001:1001</port>
                                 </ports>
                                 <!--设置容器间连接-->
                                 <links>
@@ -702,7 +698,9 @@
                                 <volumes>
                                     <bind>
                                         <volume>/etc/localtime:/etc/localtime</volume>
-                                        <volume>/mydata/${project.artifactId}/logs:/var/logs</volume>
+                                        <!--                                        <volume>/mydata/${project.artifactId}/logs:/var/logs</volume>-->
+                                        <volume>/mydata/Test/Temp:/Test/Temp</volume>
+                                        <volume>/mydata/Test/uploadFile:/Test/uploadFile</volume>
                                     </bind>
                                 </volumes>
                             </run>
@@ -723,14 +721,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-<!--                <configuration>-->
-<!--                    &lt;!&ndash; 跳过安全检查 &ndash;&gt;-->
-<!--                <skip>true</skip> -->
-<!--                    &lt;!&ndash; 排除单元测试的类不进行编译打包 &ndash;&gt;-->
-<!--                    <excludes>-->
-<!--                        <exclude>src/test/java/com/baiyx/wfwbitest/*</exclude>-->
-<!--                    </excludes>-->
-<!--                </configuration>-->
+                <configuration>
+                    <!-- 跳过安全检查 -->
+<!--                <skip>true</skip>-->
+                    <!-- 排除单元测试的类不进行编译打包 -->
+                    <excludes>
+                        <exclude>src/test/java/com/baiyx/wfwbitest/*</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
